--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,7 @@
 
 .Rhistory
 
-.Rproj.user/25E0481A/pcs/files-pane.pper
+.Rproj.user/*
 
 *.pper
 
-.Rproj.user/25E0481A/sdb/prop/A74498BF
-
-.Rproj.user/25E0481A/build_options
-
-.Rproj.user/25E0481A/sdb/prop/INDEX
-
-.Rproj.user/25E0481A/sdb/s-66855268/43BA02BE
-
-.Rproj.user/25E0481A/sdb/s-66855268/lock_file
